--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<title>Chat</title>
-			<link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css" rel="stylesheet" />
-			<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+			<link href="https://cdn.jsdmirror.com/npm/normalize.css@8.0.1/normalize.min.css" rel="stylesheet" />
+			<link href="https://cdn.jsdmirror.com/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 			<style>
 				html,
 				body,
@@ -56,13 +56,14 @@
 	--chat--subtitle--line-height: 1.8; /* 副标题行高 */
 
 	/* 输入框样式 */
-	--chat--textarea--height: 44px; /* 输入框高度 原50 */
+	--chat--textarea--height: 50px; /* 输入框高度44 原50 */
+	--chat--input--send--button--color: #2EA146; /* 输入文本后提交按钮的颜色 */
 	
 	/* 自己加 */
-	/* --chat--input--font-size: 1rem; /* 输入框文字大小，例如16px */
+	--chat--input--font-size: 1rem; /* 输入框文字大小，例如16px */
 
 	/* 消息气泡样式 */
-	--chat--message--font-size: 0.9rem; /* 消息字体大小 原1 */
+	--chat--message--font-size: 1rem; /* 消息字体大小 原1 */
 	--chat--message--padding: var(--chat--spacing); /* 消息内边距 */
 	--chat--message--border-radius: var(--chat--border-radius); /* 消息气泡圆角 */
 	--chat--message-line-height: 1.4; /* 消息行高 原1.8*/
@@ -84,7 +85,7 @@
 		</head>
 		<body>
 			<script type="module">
-				import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+				import { createChat } from 'https://cdn.jsdmirror.com/npm/@n8n/chat/dist/chat.bundle.es.js';
 
 				(async function () {
 					const authentication = 'none';
@@ -127,10 +128,10 @@
 								'X-Instance-Id': '1c905d75c75fc654dba3321432aba8c070d4d4263b1d82bc67ae06f4343c2551',
 							}
 						},
-						allowFileUploads: false,
+						allowFileUploads: true,
 						allowedFilesMimeTypes: '',
 						i18n: {
-							en: {"subtitle":"","title":"😊 酷狗音乐ˇ24小时ˇ播放助理"},
+							en: {"inputPlaceholder":"输入你的问题 . . .","subtitle":"","title":"😊 酷狗音乐ˇ24小时ˇ播放助理"},
 						},
 						initialMessages: ["欢迎光临!"],
 						enableStreaming: false,
