--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 					createChat({
 						mode: 'fullscreen',
-						webhookUrl: 'https://9p2zn9qflb-5678.cnb.run/webhook/31bb6e92-f643-46eb-8be9-d9f87ca287a2/chat',
+						webhookUrl: 'https://0rnnbq9dv9-5678.cnb.run/webhook/31bb6e92-f643-46eb-8be9-d9f87ca287a2/chat',
 						showWelcomeScreen: false,
 						loadPreviousSession: false,
 						metadata: metadata,
