--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</head>
 		<body>
 			<script type="module">
-				import { createChat } from 'https://cdn.jsdmirror.com/npm/@n8n/chat/dist/chat.bundle.es.js';
+				import { createChat } from 'https://cdn.jsdmirror.com/npm/n8n-chat-atekron@0.49.0/dist/chat.bundle.es.js';
 
 				(async function () {
 					const authentication = 'none';
@@ -117,7 +117,7 @@
 
 					createChat({
 						mode: 'fullscreen',
-						webhookUrl: 'https://9wbgvnvr5h-5678.cnb.run/webhook/31bb6e92-f643-46eb-8be9-d9f87ca287a2/chat',
+						webhookUrl: 'https://mk034bljqd-5678.cnb.run/webhook/31bb6e92-f643-46eb-8be9-d9f87ca287a2/chat',
 						showWelcomeScreen: false,
 						loadPreviousSession: false,
 						metadata: metadata,
